# fastapi_blog

./: pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/base/: __init__.py  base.py
app/config/: settings.py
app/core/: init_app.py
