[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["BoliviaYu <xilinli1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
